[gd_scene load_steps=3 format=3 uid="uid://cssaytam6dsn7"]

[ext_resource type="Script" uid="uid://boxkwgi06x8ri" path="res://Scripts/AbilityInventory/AbilityInventorySlot.gd" id="1_njnb3"]
[ext_resource type="Texture2D" uid="uid://bfjv5pykqpmoc" path="res://Placeholders/InventorySlot.png" id="2_8cvcj"]

[node name="AbilityInventorySlot" type="Panel"]
custom_minimum_size = Vector2(50, 50)
offset_right = 50.0
offset_bottom = 50.0
size_flags_horizontal = 0
script = ExtResource("1_njnb3")

[node name="SlotBorder" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8cvcj")
expand_mode = 1
stretch_mode = 5

[node name="BoxContainer" type="BoxContainer" parent="SlotBorder"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="AbilityIcon" type="TextureRect" parent="SlotBorder/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5
